Better javadocs, add document to repository