@@ -26,7 +26,9 @@ dependencies {
 }
 
 test {
-    maxHeapSize = "512m"
+    minHeapSize = "512m"
+    maxHeapSize = "8g"
+    jvmArgs '-XX:MaxPermSize=2g'
 }
 
 test.doFirst {
